--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "axios": "^0.19.0",
+    "boostrap": "^2.0.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
