--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "concurrently": "^4.1.1"
+    "concurrently": "^4.1.1",
+    "powerbi-report-component": "^1.1.3"
   }
 }
